--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.3",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -29,6 +30,7 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.2",
     "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.25"
   },
@@ -36,6 +38,7 @@
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@types/node": "^24.0.4",
+    "@types/socket.io": "^3.0.1",
     "typescript": "^5.8.3"
   }
 }
