--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
     "build": "nest build",
     "start": "node dist/main.js",
     "start:dev": "nest start --watch",
-    "start:prod": "node dist/main.js",
-    "postinstall": "npm run build"
+    "start:prod": "node dist/main.js"
   },
   "keywords": [],
   "author": "",
