--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "main": "dist/src/main",
   "scripts": {
     "build": "nest build",
-    "start": "node dist/main.js",
+    "start": "node dist/src/main.js",
     "start:dev": "nest start --watch",
-    "start:prod": "node dist/main.js"
+    "start:prod": "node dist/src/main.js"
   },
   "keywords": [],
   "author": "",
